[project]
name = "cellfinder-visualize"
authors = [{name = "Stephen Lenzi", email= "s.lenzi@ucl.ac.uk"}]
description = "Cellfinder output visualization"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "brainrender",
    "fire",
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-image",
    "Pillow",
    "scipy",
    "pyside2",
    "fancylog",
    "seaborn",
    "vedo==2021.0.5",
    "magicgui",
    "makefig",
]

[project.urls]
homepage = "https://github.com/brainglobe/cellfinder-visualize"
bug_tracker = "https://github.com/brainglobe/cellfinder-visualize/issues"
documentation = "https://github.com/brainglobe/cellfinder-visualize"
source_code = "https://github.com/brainglobe/cellfinder-visualize"
user_support = "https://github.com/brainglobe/cellfinder-visualize/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]

[project.scripts]
cellfinder_visualize = "cellfinder_visualize.main:main"

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cellfinder_visualize*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=cellfinder_visualize"

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  "*.yaml",
  "tox.ini",
  "tests/*",
  "tests/test_unit/*",
  "tests/test_integration/*",
  ".flake8"
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py","build",".eggs"]
select = ["I", "E", "F"]
fix = true
