[metadata]
name = cellfinder-visualize
url = https://github.com/SainsburyWellcomeCentre/cellfinder-visualize
download_url = https://github.com/SainsburyWellcomeCentre/cellfinder-visualize
description = Visualise cellfinder outputs
long_description = file: README.md
long_description_content_type = text/markdown
author = Stephen Lenzi
author_email = s.lenzi@ucl.ac.uk
keywords = visualisation
project_urls = 
	Source = https://github.com/SainsburyWellcomeCentre/cellfinder-visualize
	Tracker = https://github.com/SainsburyWellcomeCentre/cellfinder-visualize/issues
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows :: Windows 10
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only


[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = 
	setuptools_scm
install_requires =
	brainrender
	fire
	numpy
	pandas
	matplotlib
	scikit-image
	Pillow
	scipy
	pyside2
	fancylog
	seaborn
	vedo==2021.0.5
	magicgui

[options.extras_require]
dev = 
	black
	pytest
	pytest-cov
	gitpython
	bump2version
	pre-commit
	flake8
	coverage

[options.entry_points]
console_scripts =
    cellfinder_visualize = cellfinder_visualize.main:main

[bdist_wheel]
universal = 1

[flake8]
ignore = W503, E722
max-line-length = 79
exclude = __init__.py,build,.eggs

[bumpversion]
current_version = 0.0.1-rc0
commit = True
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<rc>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}{rc}
	{major}.{minor}.{patch}


[bumpversion:part:release]
optional_value = prod
first_value = rc
values = 
	rc
	prod

[bumpversion:part:rc]

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"
